--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,34 @@
 @import "~bootstrap/scss/bootstrap.scss";
+
+header {
+    background-color: white;
+
+    nav {
+        display: flex;
+        width: 60%;
+        margin: 0 auto;
+        justify-content: space-between;
+        padding: 1rem;
+    }
+
+    ul {
+        display: flex;
+        width: 60%;
+
+        li {
+            padding: 2rem 1rem 2rem;
+            text-transform: uppercase;
+            font-size: 13px;
+            font-weight: bold;
+
+            a {
+                color: black;
+            }
+        }
+
+    }
+
+    img {
+        width: 80%;
+    }
+}
