--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -32,3 +32,80 @@ header {
         width: 80%;
     }
 }
+
+footer {
+
+    background-image: url("../img/footer-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    section div {
+        margin-right: 5rem;
+    }
+
+    section {
+        display: flex;
+        width: 60%;
+        margin: 0 auto;
+        padding: 2rem 0 1.5rem;
+    }
+
+    div.footer-nav {
+        display: flex;
+        width: 60%;
+        margin: 0 auto;
+        padding: 2rem 0 1.5rem;
+        justify-content: space-between;
+    }
+
+    nav {
+        background-color: #303030;
+
+    }
+
+    button {
+        border: #0080e5 solid 2px;
+        color: white;
+        background-color: transparent;
+        padding: 1rem;
+        align-self: center;
+        font-weight: bold;
+    }
+
+    h2 {
+        color: white;
+        text-transform: uppercase;
+        margin-bottom: 1rem;
+    }
+
+    a {
+        color: #778581;
+        font-size: 11px;
+    }
+
+    ul {
+        margin-bottom: 1rem;
+    }
+
+    .icons {
+        display: flex;
+
+        li {
+            margin-left: 1rem;
+            align-self: center;
+        }
+    }
+
+    #follow {
+        color: #0080e5;
+        text-transform: uppercase;
+        font-weight: bolder;
+        padding-top: 0.7rem;
+    }
+
+    .dc-logo img {
+        width: 70%;
+        margin-left: 10rem;
+    }
+
+}
