--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,18 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+body {
+    font-family: "Roboto", sans-serif;
+    background-color: #1f1f1f;
+}
+
 header {
     background-color: white;
 
@@ -91,7 +104,7 @@ footer {
         display: flex;
 
         li {
-            margin-left: 1rem;
+
             align-self: center;
         }
     }
@@ -108,4 +121,35 @@ footer {
         margin-left: 10rem;
     }
 
+}
+
+section.merch-section {
+
+    background-color: #0282f9;
+    width: 100%;
+    display: flex;
+
+    div.merch {
+        width: 60%;
+        display: flex;
+        margin: 0 auto;
+        justify-content: space-between;
+        padding: 3rem;
+
+        img {
+            width: 40px;
+            margin-right: 1rem;
+            object-fit: contain;
+        }
+
+        div {
+            display: flex;
+
+            p {
+                align-self: center;
+                color: white;
+                text-transform: uppercase;
+            }
+        }
+    }
 }
